# Feed-Fusion

./: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yaml  logging_config.json  pyproject.toml
src/: config.py  db.py  main.py
src/api/v1/: __init__.py  auth.py  channels.py  ml.py  news.py  samples.py  subscriptions.py
src/bot/: bot.py
src/data/: news.json
src/gunicorn/: app.py  run.py
src/migrations/: env.py
src/migrations/versions/: 2025_10_31_1330-70c638e32068_created_news_channel_model.py  2025_10_31_1752-18c93b7b5930_created_channel_models.py  2025_10_31_1753-a7be86e6ce36_created_model_for_news.py  2025_10_31_1853-4fc804a4cc66_forgot_to_add_image_field_into_news_.py  2025_11_01_1224-ede02ab2dcbb_created_user_and_token_models.py  (+10 more)
src/ml/: __init__.py  artifacts.py  io_utils.py  network.py  prediction.py  schemas.py  service.py  text.py  training.py  vocab.py
src/models/: __init__.py  auth.py  base.py  channels.py  ml.py  news.py  subscriptions.py
src/repos/: auth.py  base.py  channels.py  ml.py  news.py  subscriptions.py
src/schemas/: auth.py  base.py  channels.py  enums.py  ml.py  news.py  samples.py  subscriptions.py
src/services/: auth.py  base.py  channels.py  news.py  subscriptions.py  training.py
src/static/: app.js  index.html  styles.css
src/tasks/: app.py  consumer.py  ml.py  parser.py  processor.py  publisher.py  subs.py
src/utils/: db_tools.py  es_manager.py  exceptions.py  hashing.py  log_config.py  redis_manager.py  rmq_manager.py  search_sync.py  texts.py
tests/: conftest.py
(+8 files in other folders)
